--- a/project.config
+++ b/project.config
@@ -1,6 +1,10 @@
-[access]
-	inheritFrom = All-Projects
 [project]
 	state = active
 [access "refs/heads/*"]
 	owner = group serveradminmaintainer
+	create = group serveradminmaintainer
+	push = group serveradminmaintainer
+	pushMerge = group serveradminmaintainer
+	label-Code-Review = -2..+2 group serveradminmaintainer
+	label-Verified = -1..+1 group serveradminmaintainer
+	rebase = group serveradminmaintainer
